--- a/docker/nano/Dockerfile
+++ b/docker/nano/Dockerfile
@@ -25,25 +25,50 @@ RUN echo "${USER}:111111" | chpasswd
 RUN apt-get update && apt-get install --no-install-recommends -y \
     libusb-1.0 \
     gtk+-3.0 \
-    build-essential \
     make \
     cmake \
     g++ \
     tzdata \
-    dirmngr \
-    lsb-release \
-    gnupg2 \
     libpcap-dev \
     libglfw3-dev \
-    python3-pip \
-    python3-opencv  \
     python3-scipy   \
     python-vcstools \
     python-scipy \
-    python-gobject \
+    locales \
+    git \
+    vim \
+    gedit \
+    wget \
+    sudo \
+    unzip \
+    gcc-8 g++-8 \
+    ca-certificates \
+    curl \
+    ffmpeg \
+    net-tools \
+    dirmngr \
+    gnupg2 \
+    mercurial \
     python-gtk2 \
+    python-gobject \
+    python-tk \
+    python3-pip \
+    python3-dev \
+    python3-opencv \
+    python3-setuptools \
+    python3-rospkg -y \
+    lsb-release \
     libcanberra-gtk-module \
     libcanberra-gtk3-module \
+    libignition-math4-dev \
+    libmove-base-msgs-dev \
+    ruby-full \
+    libopencv-core-dev \
+    libopencv-highgui-dev \
+    libopencv-imgproc-dev \
+    libopencv-video-dev \
+    libopencv-calib3d-dev \
+    libopencv-features2d-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -56,36 +81,36 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C1CF6E31E6
 # install ros packages
 ENV ROS_DISTRO melodic
 RUN apt-get update && apt-get install -y \ 
-    ros-${ROS_DISTRO}-desktop-full \
+    ros-$ROS_DISTRO-desktop-full \
+    ros-$ROS_DISTRO-joy \
+    ros-$ROS_DISTRO-joystick-drivers \
+    ros-$ROS_DISTRO-teleop-twist-joy \
+    ros-$ROS_DISTRO-rviz-imu-plugin \
+    ros-$ROS_DISTRO-roslint \
+    ros-$ROS_DISTRO-rosserial \
+    ros-$ROS_DISTRO-rosserial-arduino \
+    ros-$ROS_DISTRO-controller-manager \
+    ros-$ROS_DISTRO-twist-mux \
+    ros-$ROS_DISTRO-interactive-marker-twist-server \
+    ros-$ROS_DISTRO-perception \
+    ros-$ROS_DISTRO-rgbd-launch \
+    ros-$ROS_DISTRO-robot-localization \
+    ros-$ROS_DISTRO-spacenav-node \
+    ros-$ROS_DISTRO-tf2-sensor-msgs \
+    ros-$ROS_DISTRO-pointcloud-to-laserscan \
+    ros-$ROS_DISTRO-velodyne-simulator \
     ros-$ROS_DISTRO-serial \
     ros-$ROS_DISTRO-soem \
     ros-$ROS_DISTRO-openslam-gmapping \
     ros-$ROS_DISTRO-geodesy \
     ros-$ROS_DISTRO-cartographer-* \
     ros-$ROS_DISTRO-ddynamic-reconfigure \
-    ros-$ROS_DISTRO-perception \
-    ros-$ROS_DISTRO-rgbd-launch \
-    ros-$ROS_DISTRO-joystick-drivers \
-    ros-$ROS_DISTRO-pointcloud-to-laserscan \
-    ros-$ROS_DISTRO-robot-localization \
-    ros-$ROS_DISTRO-spacenav-node \
-    ros-$ROS_DISTRO-tf2-sensor-msgs \
-    ros-$ROS_DISTRO-controller-manager \
-    ros-$ROS_DISTRO-twist-mux \
-    ros-$ROS_DISTRO-velodyne-simulator \
-    ros-$ROS_DISTRO-gazebo-ros \
-    ros-$ROS_DISTRO-move-base-msgs \
     ros-$ROS_DISTRO-lms1xx \
-    ros-$ROS_DISTRO-rviz-imu-plugin \
-    ros-$ROS_DISTRO-interactive-marker-twist-server \
-    ros-$ROS_DISTRO-teleop-twist-joy \
-    ros-$ROS_DISTRO-rosserial-arduino \
-    ros-$ROS_DISTRO-rosserial \
     python-rosdep \
     python-rosinstall \
     python-rosinstall-generator \
     python-wstool \
-    && apt-get clean \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 # bootstrap rosdep
@@ -97,18 +122,35 @@ RUN rosdep init \
 RUN pip3 install --upgrade pip setuptools
 
 RUN pip3 install \
+    gym \
     numpy \
-    rospkg \
-    catkin-tools \
-    cython \
-    pandas \
-    image \
-    Pillow \
+    tensorflow==1.14.0 \
+    gast==0.2.2 \
+    matplotlib \
     pandas \
     pypozyx \
-    empy \
-    gdown \
+    requests \
+    jupyter \
+    ipykernel \
+    rospkg \
     mediapipe \
+    catkin-tools \
+    scikit-image \
+    scikit-learn \
+    zerorpc \
+    cython \
+    lxml \
+    empy  \
+    opencv-python \
+    opencv-contrib-python==4.2.0.34 \
+    wheel \
+    future \
+    six==1.14.0 \
+    tf_slim \
+    imutils \
+    scipy
+
+RUN pip install mediapipe
 
 ####################################### procman ###########################################
 
@@ -125,6 +167,16 @@ RUN cd ${HOME} && git clone https://github.com/DiaboloKiat/procman \
     && cd build \
     && cmake .. \
     && make install
+
+####################################### Install bazel ###########################################
+
+ARG BAZEL_VERSION=3.7.2
+RUN cd ${HOME} && mkdir /bazel \
+    && wget --no-check-certificate -O /bazel/installer.sh "https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-installer-linux-x86_64.sh" \
+    && wget --no-check-certificate -O  /bazel/LICENSE.txt "https://raw.githubusercontent.com/bazelbuild/bazel/master/LICENSE" \
+    && chmod +x /bazel/installer.sh \
+    && /bazel/installer.sh \
+    && rm -f /bazel/installer.sh
 
 ######################################## realsense ########################################
 
@@ -150,11 +202,18 @@ RUN wget https://github.com/IntelRealSense/librealsense/archive/v${LIBREALSENSE_
     make install && \
     rm -rf librealsense-${LIBREALSENSE_VERSION}
 
+####################################### mediapipe ###########################################
+
+RUN cd ${HOME} && git clone https://github.com/google/mediapipe.git
+    && cd mediapipe \
+    && sed -i "s/x86_64-linux-gnu/aarch64-linux-gnu/g" third_party/opencv_linux.BUILD
 
 ##################################### Setting #####################################
 
 RUN chown -R ${USER}:${USER} ${HOME}/
 RUN echo "seadrone ALL=(ALL)  ALL" > /etc/sudoers
+
+RUN echo "cd ~/seadrone-project" >> ${HOME}/.bashrc
 
 # Support of nvidia-docker 2.0
 ENV NVIDIA_VISIBLE_DEVICES=all
